# Zork-Opus

./: .gitignore  README.md  TODO.md  agent.py  config.py  context_manager.py  critic.py  endpoints.json  evidence.py  evidence_miner.py  extractor.py  game_interface.py  gen41_analysis.md  knowledge.py  llm_client.py  logger.py  main.py  map_graph.py  map_manager.py  memory.py  objectives.py  orchestrator.py  pathfinder.py  prompt_logger.py  proxy.js  pyproject.toml  run_game.sh  session.py  state.py  streaming.py  treasures.py  viewer.html  walkthrough.py  web_search.py
debate/: architect-defense.md  architect-grounded.md  architect-rebuttal.md  architect.md  devils-advocate-ground-truth.md  devils-advocate-rebuttal.md  devils-advocate-rebuttal2.md  devils-advocate.md  implementation-summary.md  pragmatist.md
game_files/: Memories.md  procedures.json  zorkRooms.csv
prompts/: agent.md
room_images/: room_image_map.json
tests/: test_learning_loop.py
