[project]
name = "Zork-Opus"
version = "1.0.0"
description = "AI plays Zork I - clean rewrite optimized for Opus 4.6's 1M context window"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.4",
    "pydantic-settings>=2.11.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "jericho>=3.3.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "filelock>=3.20.0",
    "websockets>=16.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov>=4.0"]
s3 = ["boto3>=1.34.0"]

[tool.setuptools]
py-modules = [
    "main", "orchestrator", "config", "state", "llm_client", "prompt_logger",
    "game_interface", "logger", "agent", "critic", "extractor", "memory",
    "map_graph", "map_manager", "pathfinder", "context_manager", "knowledge",
    "objectives", "walkthrough", "web_search", "streaming", "session",
]

[tool.zorkopus]
# ══════════════════════════════════════════════════════════════
# LLM Configuration
# ══════════════════════════════════════════════════════════════
[tool.zorkopus.llm]
client_base_url = "https://api.schuyler.ai/v1"
agent_model = "step-3.5-flash-q4_k_s-00001-of-00003.gguf"
critic_model = "step-3.5-flash-q4_k_s-00001-of-00003.gguf"
extractor_model = "step-3.5-flash-q4_k_s-00001-of-00003.gguf"
memory_model = "step-3.5-flash-q4_k_s-00001-of-00003.gguf"
analysis_model = "step-3.5-flash-q4_k_s-00001-of-00003.gguf"
reasoner_model = "step-3.5-flash-q4_k_s-00001-of-00003.gguf"
reasoner_base_url = "https://api.schuyler.ai/v1"

# ══════════════════════════════════════════════════════════════
# Retry / Circuit Breaker
# ══════════════════════════════════════════════════════════════
[tool.zorkopus.retry]
max_retries = 3
initial_delay = 1.0
max_delay = 30.0
exponential_base = 2.0
jitter_factor = 0.1
timeout_seconds = 1800.0
circuit_breaker_failure_threshold = 10
circuit_breaker_recovery_timeout = 300.0

# ══════════════════════════════════════════════════════════════
# Sampling Parameters
# ══════════════════════════════════════════════════════════════
[tool.zorkopus.agent_sampling]
temperature = 1.0
top_p = 0.95
top_k = 20
presence_penalty = 1.5
max_tokens = 8192
enable_thinking_mode = false
enable_thinking = true

[tool.zorkopus.critic_sampling]
temperature = 0.1
max_tokens = 8192
enable_thinking = false

[tool.zorkopus.memory_sampling]
temperature = 0.3
max_tokens = 8192
memory_history_window = 1
enable_thinking = false

[tool.zorkopus.analysis_sampling]
temperature = 0.3
top_p = 0.8
top_k = 20
max_tokens = 8192
enable_thinking = true

[tool.zorkopus.reasoner_sampling]
temperature = 0.7
top_p = 0.95
top_k = 20
min_p = 0.05
max_tokens = 32000
enable_deep_reasoning = true
enable_thinking = true

[tool.zorkopus.turn_review_sampling]
temperature = 0.1
max_tokens = 8192
enable_thinking = false

[tool.zorkopus.pathfinder_sampling]
temperature = 0.1
max_tokens = 8192
enable_thinking = false

# ══════════════════════════════════════════════════════════════
# Gameplay
# ══════════════════════════════════════════════════════════════
[tool.zorkopus.gameplay]
turn_delay_seconds = 0
turn_window_size = 100
critic_rejection_threshold = -0.2
enable_critic = false
enable_exit_pruning = true
exit_failure_threshold = 2
game_workdir = "game_files"
game_file_path = "jericho-game-suite/zork1.z5"

# ══════════════════════════════════════════════════════════════
# Orchestrator
# ══════════════════════════════════════════════════════════════
[tool.zorkopus.orchestrator]
max_turns_per_episode = 500
knowledge_update_interval = 100
objective_update_interval = 10
enable_state_export = true
enable_inter_episode_synthesis = true
enable_walkthrough_generation = true
enable_objective_refinement = false

# ══════════════════════════════════════════════════════════════
# Loop Break / Anti-Stuck
# ══════════════════════════════════════════════════════════════
[tool.zorkopus.loop_break]
max_turns_stuck = 40
stuck_check_interval = 5
enable_objective_based_progress = true
enable_location_penalty = true
location_revisit_penalty = -0.2
location_revisit_window = 5
enable_exploration_hints = true
action_novelty_window = 15
enable_stuck_warnings = true
stuck_warning_threshold = 15

# ══════════════════════════════════════════════════════════════
# Memory
# ══════════════════════════════════════════════════════════════
[tool.zorkopus.memory]
memory_file = "Memories.md"
max_memories_shown = 15

# ══════════════════════════════════════════════════════════════
# Files
# ══════════════════════════════════════════════════════════════
[tool.zorkopus.files]
episode_log_file = "zork_episode_log.txt"
json_log_file = "zork_episode_log.jsonl"
state_export_file = "current_state.json"
map_state_file = "map_state.json"
knowledge_file = "knowledgebase.md"

# ══════════════════════════════════════════════════════════════
# Pathfinder
# ══════════════════════════════════════════════════════════════
[tool.zorkopus.pathfinder]
enable_pathfinder = true
max_path_length = 20

# ══════════════════════════════════════════════════════════════
# Streaming (WebSocket)
# ══════════════════════════════════════════════════════════════
[tool.zorkopus.streaming]
enable_streaming = true
websocket_host = "0.0.0.0"
websocket_port = 8765

# ══════════════════════════════════════════════════════════════
# Web Search (MCP)
# ══════════════════════════════════════════════════════════════
[tool.zorkopus.web_search]
enable_web_search = false
searxng_url = "http://192.168.4.26:8090/searxng/mcp"
crawl4ai_url = "https://mcp.schuyler.ai/crawl4ai/mcp"
max_results = 3
max_crawl_length = 2000
timeout = 30.0
stuck_threshold = 10

# ══════════════════════════════════════════════════════════════
# AWS (optional)
# ══════════════════════════════════════════════════════════════
[tool.zorkopus.aws]
s3_key_prefix = "zorkgpt/"

# ══════════════════════════════════════════════════════════════
# Prompt Logger (replaces Langfuse)
# ══════════════════════════════════════════════════════════════
[tool.zorkopus.prompt_logger]
enable = true
log_dir = "game_files/prompt_logs"
max_content_length = 50000
